<resources>
    <string name="app_name">EducationalApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_login_string">Login</string>
    <string name="username_empty_string">Username is empty</string>
    <string name="password_empty_string">Password is empty</string>
    <string name="no_user_string">User does not exist</string>
    <string name="password_incorrect_string">Password is incorrect</string>
    <string name="username_password_incorrect_string">Username or password is incorrect</string>
    <string name="register_string">New? Register Here</string>
    <string name="forgot_password_string">Forgot Password?</string>
    <string name="next_string">Next</string>
    <string name="register_start_string">Ayo mulai petualanganmu sekarang!</string>
    <string name="start_string">Start</string>
    <string name="pilih_karakter_title_string">Pilih Karakter yang Akan Menemani Petualanganmu</string>
    <string name="pilih_kelompok_title_string">Pilih Kelompok yang Cocok Denganmu</string>
    <string name="register5_title_string">Siapkah Kamu dengan Petualangan Barumu Menggunakan Pilihan Berikut?</string>
    <string name="nama_lengkap_string">Nama Lengkap</string>
    <string name="email_string">Email</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="peran_string">Peran</string>
    <string name="grup_string">Grup</string>
    <string name="ya_string">Ya</string>
    <string name="tidak_string">Tidak</string>
</resources>
