<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.educationalapp.eduapp.educationalapp.registermodule.Register5Fragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/FragmentRegister5_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:text="@string/register5_title_string" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap_string"
            android:inputType="text"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textColorHint="#fff"
            android:id="@+id/FragmentRegister_fullname_et_2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_string"
            android:inputType="textEmailAddress"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textColorHint="#fff"
            android:id="@+id/FragmentRegister_email_et_2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_string"
            android:inputType="text"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textColorHint="#fff"
            android:id="@+id/FragmentRegister_username_et_2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_string"
            android:inputType="textPassword"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textColorHint="#fff"
            android:id="@+id/FragmentRegister_password_et_2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peran_string"
            android:inputType="textEmailAddress"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textColorHint="#fff"
            android:id="@+id/FragmentRegister_peran_et" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/grup_string"
            android:inputType="text"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textColorHint="#fff"
            android:id="@+id/FragmentRegister_grup_et" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/FragmentRegister_ya_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorButtonBlue"
            android:text="@string/ya_string"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
        <Button
            android:id="@+id/FragmentRegister_tidak_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorButtonBlue"
            android:text="@string/tidak_string"
            android:textColor="@android:color/white"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>
